// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistorySearch index states > snapshots building output with coverage and progress 1`] = `
{
  "coverage": "Subagent tool output and main tool output beyond 4096 chars are not indexed by default; use HistoryRead for full turns.",
  "has_more": false,
  "hits": [
    {
      "agent_id": "main",
      "role": "assistant",
      "session_id": "older",
      "snippet": "result",
      "step_id": "t3.1",
      "turn": 3,
    },
  ],
  "index_state": {
    "documents": 14,
    "indexedSessions": 2,
    "state": "building",
    "totalSessions": 3,
  },
  "source": "index",
}
`;

exports[`HistorySearch index states > snapshots ready output with coverage and progress 1`] = `
{
  "coverage": "Subagent tool output and main tool output beyond 4096 chars are not indexed by default; use HistoryRead for full turns.",
  "has_more": false,
  "hits": [
    {
      "agent_id": "main",
      "role": "assistant",
      "session_id": "older",
      "snippet": "result",
      "step_id": "t3.1",
      "turn": 3,
    },
  ],
  "index_state": {
    "documents": 14,
    "indexedSessions": 3,
    "state": "ready",
    "totalSessions": 3,
  },
  "source": "index",
}
`;

exports[`HistorySearch index states > snapshots unavailable output with coverage and progress 1`] = `
{
  "coverage": "Subagent tool output and main tool output beyond 4096 chars are not indexed by default; use HistoryRead for full turns.",
  "has_more": false,
  "hits": [],
  "index_state": {
    "documents": 14,
    "indexedSessions": 3,
    "reason": "sqlite_unavailable",
    "state": "unavailable",
    "totalSessions": 3,
  },
  "source": "fallback",
}
`;
